[gd_scene load_steps=8 format=3 uid="uid://plfqjb4ej2sv"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1"]
[ext_resource type="PackedScene" path="res://Menus/background.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dvn3b3ocji568" path="res://Art/Tiny Pickaxe Art.png" id="3"]
[ext_resource type="PackedScene" uid="uid://y0affnsd8io2" path="res://UI/blue_button.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Menus/options.tscn" id="5"]

[sub_resource type="InputEventKey" id="InputEventKey_g6u3c"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_p04kh"]
events = [SubResource("InputEventKey_g6u3c")]

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("2")]
layout_mode = 1

[node name="Title" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -243.0
offset_top = 60.0
offset_right = 253.0
offset_bottom = 158.0
grow_horizontal = 2
stretch = true
stretch_shrink = 7

[node name="SubViewport" type="SubViewport" parent="Title"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(70, 14)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Title/SubViewport"]
offset_left = 1.0
offset_top = 1.0
offset_right = 421.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "HHHHHHHHH"

[node name="Subtitle" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.0
offset_top = 180.0
offset_right = 302.0
offset_bottom = 236.0
grow_horizontal = 2
stretch = true
stretch_shrink = 7

[node name="SubViewport" type="SubViewport" parent="Subtitle"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(86, 8)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Subtitle/SubViewport"]
offset_left = 1.0
offset_top = 1.0
offset_right = 421.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0.968627, 1, 0.972549, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.0666667, 0.0627451, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 6
text = "- Bbbbbghghghghghghghg  -"

[node name="Pickaxe Art" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 609.0
offset_top = 72.0
offset_right = 681.0
offset_bottom = 144.0
texture = ExtResource("3")

[node name="Pickaxe Art2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1249.0
offset_top = 72.0
offset_right = 1321.0
offset_bottom = 144.0
texture = ExtResource("3")
flip_h = true

[node name="Fullscreen" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 1592.0
offset_top = 952.0
offset_right = 1852.0
offset_bottom = 1025.0
size_flags_vertical = 8
text = "fullscreen"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -363.0
offset_right = 320.0
offset_bottom = -60.0
grow_vertical = 0
theme_override_constants/separation = 18

[node name="Play" parent="Buttons" instance=ExtResource("4")]
layout_mode = 2
shortcut = SubResource("Shortcut_p04kh")
text = "play"

[node name="Bumper" type="Control" parent="Buttons"]
visible = false
layout_mode = 2

[node name="Tutorial" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "tutorial"

[node name="About" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "about"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "options"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "quit"

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -88.0
offset_right = -63.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "gam of th yar"
horizontal_alignment = 1

[node name="Options" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1
offset_left = -320.0
offset_top = -220.0
offset_right = 316.0
offset_bottom = 392.0

[node name="Tutorial Label" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 688.0
offset_right = 1118.0
offset_bottom = 721.0
text = "tutorial will be shown next time you play!"

[node name="Tutorial Button Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="mouse_entered" from="Fullscreen" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="mouse_entered" from="Buttons/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Buttons/Tutorial" to="." method="_on_tutorial_mouse_entered"]
[connection signal="pressed" from="Buttons/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="mouse_entered" from="Buttons/About" to="." method="_on_about_mouse_entered"]
[connection signal="pressed" from="Buttons/About" to="." method="_on_about_pressed"]
[connection signal="mouse_entered" from="Buttons/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Tutorial Button Timer" to="." method="_on_tutorial_button_timer_timeout"]
